--- a/css/modules/instagram.scss
+++ b/css/modules/instagram.scss
@@ -26,7 +26,7 @@ section.instagram {
 
     #sb_instagram {
         #sbi_images {
-            padding: 1rem 0;
+            padding: 1rem;
             margin-bottom: 1rem;
         }
 
