--- a/css/modules/specialties.scss
+++ b/css/modules/specialties.scss
@@ -1,126 +1,83 @@
-.specialties-slider {
-  position: relative;
-  width: 100%;
-  
-  .slick-list {
-    margin: 0 1.5rem;
+.swiper {
+    width: 100%;
+    height: auto;
 
-    .slider-item {
-      box-shadow: 0px 6px 4px 0px rgba(50, 5, 7, 0.25);
-      border: 1px solid rgba(50, 5, 7, 0.25);
-      border-radius: 15px;
-      padding: 1rem;
-      margin: 1rem 0;
-      min-height: 210px;
+    .swiper-wrapper {
+        display: flex;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
 
-      @media screen and (min-width: 900px) {
-        min-height: 270px;
-      }
+    .swiper-slide {
+        display: flex;
+        flex-shrink: 0;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 6px 4px 0px rgba(50, 5, 7, 0.25);
+        border: 1px solid rgba(50, 5, 7, 0.25);
+        border-radius: 15px;
+        box-sizing: border-box;
+        padding: 1rem;
+        min-height: 210px;
+        background-color: $white;
+        margin-bottom: 1rem;
 
-      .specialty {
+        @media screen and (min-width: 750px) {
+            min-height: 320px;
+            flex: 0 0 auto;
+        }
+
+        @media screen and (min-width: 1024px) {
+            &.swiper-slide-prev,
+            &.swiper-slide-next {
+                transition: transform 0.3s ease-in-out;
+                transform: scale(0.9);
+            }
+        }
+    }
+
+    .specialty {
         display: flex;
         flex-direction: column;
         align-items: center;
+
         h4 {
-          color: $dark-red;
+            color: $dark-red;
         }
+
         a {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          gap: 5px;
-          color: $dark-orange;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            color: $dark-orange;
         }
-      }
     }
 
-    .slick-slide {
-      margin: 0 0.5rem;
-      padding: 0 10px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-  }
-
-  .slick-arrow {
-    position: absolute;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    z-index: 10;
-    &.specialty-prev {
-      left: 0;
-      padding: 0;
-    }
-
-    &.specialty-next {
-      right: 2px;
-      padding: 0;
-    }
-    i {
-      font-size: 1.5rem;
-      color: $dark-red;
-    }
-
-    @media screen and (max-width: 900px) {
-      bottom: -10%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50px;
-      margin: 0;
-      &.specialty-prev {
-        left: calc(50% - 40px);
-        transform: none;
-      }
-  
-      &.specialty-next {
-        left: 50%;
-        transform: none;
-      }
-    }
-
-    @media screen and (min-width: 900px) {
-      top: 50%;
-      transform: translateY(-50%);
-      width: 40px;
-      height: 40px;
-    }
-  }
-}
-
-@media screen and (min-width: 1024px){
-  .specialties-slider {
-    .slick-list {
-      padding: 1rem 0 !important;
-      .slider-item {
-        min-height: 300px;
-        height: 100%;
-        box-sizing: border-box;
-        display: inline-flex !important;
+    .swiper-arrows {
+        display: flex;
         justify-content: center;
-        align-items: center;
-      }
-      .slick-slide {
-        margin: 0;
-        transform: translate3d(0,0,0) scale(1) !important;
-        transition: transform 0.3s ease;
-        transition-delay: 0.3s;
-      }
-    
-      .slick-active {
-        &:not(.slick-center) {
-          transform: translate3d(0,0,0) scale(0.9) !important;
-          transition: transform 0.3s ease;
-          transition-delay: 0.3s;
+        gap: 10px;
+        position: absolute;
+        bottom: 1rem;
+        left: calc((100%/2) - 50px);
+        width: 18%;
+        z-index: 10;
+
+        .swiper-button-next,
+        .swiper-button-prev {
+            font-size: 1.5rem;
+            color: $dark-red;
+            &::after {
+                content: "";
+            }
         }
 
-        &.slick-center {
-          transform: translate3d(0,0,0) scale(1.1) !important;
-          transition: transform 0.3s ease;
-          transition-delay: 0.3s;
+        @media screen and (min-width: 1024px) {
+            width: 100%;
+            top: 50%;
+            left: initial;
+            transform: translateY(-50%);
         }
-      }
     }
-  }
-
 }
